--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,18 @@
 *.so
 *.dylib
 
+# Key
+*.pem
+*.service
+
 # Test binary, built with `go test -c`
 *.test
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+*.log
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+docs/
+go.sum
